# topobank-orcid

./: LICENSE  README.md  pyproject.toml  topobank_orcid_test_settings.py
.github/workflows/: flake8.yml  test.yml
topobank_orcid/: version.py
topobank_orcid/authorization/: apps.py  models.py
topobank_orcid/organizations/: apps.py  models.py  permissions.py
topobank_orcid/users/: anonymous.py  apps.py  middleware.py  models.py
topobank_orcid/users/management/commands/: grant_admin_permissions.py  notify_users.py  purge_user.py
